# ros2_serial_diff_drive_bridge

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: ros2_serial_diff_drive_bridge.params.yaml
launch/: ros2_serial_diff_drive_bridge.launch.py
resource/: ros2_serial_diff_drive_bridge
ros2_serial_diff_drive_bridge/: __init__.py  bridge_node.py
