<?xml version="1.0"?>
<package format="3">
  <name>ros2_serial_diff_drive_bridge</name>
  <version>0.1.1</version>
  <description>ROS 2 serial diff-drive bridge for the RobotMotorDriver CMD_VEL/STATE firmware protocol.</description>
  <maintainer email="NinjaGirlGmr@users.noreply.github.com">NinjaGirlGmr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
